cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11 -DUSE_AVX_INSTRUCTIONS=ON  -DUSE_SSE2_INSTRUCTIONS=ON -DUSE_SSE2_INSTRUCTIONS=ON)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../..)
set(BASE /home/panghao/github/kunlib)
include_directories(../include ${BASE}/include ${BASE}/include/librdkafka  ${BASE}/include/hiredis ${BASE}/user)
link_directories(/opt/OpenBLAS/lib ${BASE}/libs /usr/local/lib64)
add_executable(feden  faceConfig.cpp track.cpp main.cpp featureRepo.cpp faceControl.cpp cv_help.cpp httpUtil.cpp userControl.cpp http-server.cpp image_buf.cpp image_base64.cpp md5.cpp faceAgent.cpp faceRepo.cpp faceService.cpp)
add_executable(feden_test faceConfig.cpp track.cpp test.cpp  featureRepo.cpp cv_help.cpp httpUtil.cpp faceControl.cpp userControl.cpp http-server.cpp image_buf.cpp image_base64.cpp md5.cpp faceAgent.cpp faceRepo.cpp faceService.cpp)

target_link_libraries(feden pkafka pbase64 kunApiPool  openblas kunFace dlib  mongoc-1.0 bson-1.0 kunconfig hiredis  jsoncpp  event  opencv_dnn opencv_imgcodecs opencv_core opencv_imgproc opencv_highgui opencv_video opencv_videoio glog pthread)
target_link_libraries(feden_test pkafka pbase64 kunApiPool  openblas kunFace dlib  mongoc-1.0 bson-1.0 kunconfig hiredis  jsoncpp  event  opencv_dnn opencv_imgcodecs opencv_core opencv_imgproc opencv_highgui opencv_video opencv_videoio glog pthread)
